[gd_scene load_steps=10 format=3 uid="uid://csdltncgdptgp"]

[ext_resource type="Script" uid="uid://dlt8lcetsw10k" path="res://scenes/objects/plants/crops/tomato.gd" id="1_64hfm"]
[ext_resource type="Texture2D" uid="uid://dy3ecqlsyyo7j" path="res://assets/game/objects/basic_plants.png" id="2_7wa4w"]
[ext_resource type="PackedScene" uid="uid://cf4xm6ry0wew3" path="res://scenes/objects/plants/flowering_particles.tscn" id="3_ba628"]
[ext_resource type="PackedScene" uid="uid://bqtwn117tmsij" path="res://scenes/objects/plants/watering_particles.tscn" id="4_ygb4m"]
[ext_resource type="PackedScene" uid="uid://8p0x2pmdwt4q" path="res://scenes/objects/plants/components/growth_cycle_component.tscn" id="5_daxrj"]
[ext_resource type="PackedScene" uid="uid://dmll0x4hn1qv5" path="res://scenes/components/hurt_component.tscn" id="6_cnugd"]
[ext_resource type="PackedScene" uid="uid://d2gs64f3h1787" path="res://scenes/components/save_data_component.tscn" id="7_ba628"]
[ext_resource type="Resource" uid="uid://dwnum1nr7ufqd" path="res://resources/scene_data_resource.tres" id="8_ygb4m"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ac2y6"]
size = Vector2(6, 6)

[node name="Tomato" type="Node2D"]
script = ExtResource("1_64hfm")

[node name="Sprite2D" type="Sprite2D" parent="."]
y_sort_enabled = true
position = Vector2(0, -4)
texture = ExtResource("2_7wa4w")
hframes = 6
vframes = 2
frame = 8

[node name="FloweringParticles" parent="." instance=ExtResource("3_ba628")]

[node name="Watering particles" parent="." instance=ExtResource("4_ygb4m")]

[node name="GrowthCycleComponent" parent="." instance=ExtResource("5_daxrj")]

[node name="HurtComponent" parent="." instance=ExtResource("6_cnugd")]
tool = 3

[node name="HitArea" type="CollisionShape2D" parent="HurtComponent"]
shape = SubResource("RectangleShape2D_ac2y6")

[node name="SaveDataComponent" parent="." instance=ExtResource("7_ba628")]
save_data_resource = ExtResource("8_ygb4m")
